--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.0",
-    "@angular/cli": "^10.0.5",
+    "@angular/cli": "^10.2.0",
     "@angular/common": "~10.0.0",
-    "@angular/cli": "^10.0.5",
-    "@angular/compiler-cli": "^10.0.8",
     "@angular/compiler": "~10.0.0",
-    "@angular/compiler-cli": "^10.0.8",
+    "@angular/compiler-cli": "^10.2.2",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
     "@angular/platform-browser": "~10.0.0",
@@ -37,9 +35,9 @@
     "typescript": "~3.9.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "^10.0.5",
-    "@angular/compiler-cli": "^10.0.8",
+    "@angular-devkit/build-angular": "^0.1002.0",
+    "@angular/cli": "^10.2.0",
+    "@angular/compiler-cli": "^10.2.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
